@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<registry>
+  <records interface="opengever.workspace.interfaces.IWorkspaceSettings" />
+</registry>
