@@ -22,6 +22,12 @@ class IWorkspaceSettings(Interface):
         description=u'Whether workspace integration is enabled',
         default=False)
 
+    invitation_group_dn = schema.TextLine(
+        title=u'Invitation Group DN',
+        description=u'DN of a group where invited users are added on registration',
+        default=None,
+    )
+
 
 class IToDo(Interface):
     """ Marker interface for ToDos """
